tests/lang/compile_fail/cstring_conversion_requires_result.kojs
cs: CString = "hello".to_cstring()
